# autodepth

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_raw_auction_ingestion.py  0002_scraper_observability.py  0003_raw_page_pipeline.py  a1b2c3d4e5f6_enrich_vehicle_sales.py  b63cfeaadd05_initial_schema.py  c9d0e1f2a3b4_add_auction_archive_fields.py  f7e8d9c0b1a2_create_listing_snapshots.py
backend/app/: auth.py  broadcast.py  db.py  main.py  settings.py
backend/app/api/: admin.py  admin_raw_pages.py  admin_schemas.py  cars.py  market.py  market_mapping.py  market_params.py  market_schemas.py  schemas.py  (+2 more)
backend/scripts/: fetch_bat_fixture.py  fetch_cars_and_bids_fixture.py  fetch_cars_com_fixture.py  run_depreciation.py  run_raw_pipeline.py  run_scraper.py  seed_cars.py
backend/tests/: conftest.py  test_admin_dashboard.py  test_admin_raw_pages.py  test_base_scraper.py  test_bat_concurrent_backfill.py  test_bat_raw_seed.py  test_bat_scraper.py  test_cars_and_bids_scraper.py  test_cars_api.py  test_cars_com_scraper.py  test_depreciation.py  test_makes_config.py  test_market_api.py  test_predictions_api.py  test_raw_artifacts.py  test_raw_ingestion_reset.py  test_raw_pipeline.py  test_raw_worker.py  test_run_raw_pipeline_cli.py  test_run_scraper_cli.py  test_scraper_integration.py  test_scraper_observability.py  test_scraper_runtime.py  test_scraper_service.py  test_watchlist_api.py
(+104 files in other folders)
